rust_writer_procedural/tests/ui/parse_attrs_fails_if_combined_macros_dont_have_same_implementor_set.stderr
error: #[mutator]/#[finder] combination is only possible if the set of implementors in both attributes is the same.
  --> tests/ui/parse_attrs_fails_if_combined_macros_dont_have_same_implementor_set.rs:13:8
   |
13 | struct SomeStruct;
   |        ^^^^^^^^^^

error[E0412]: cannot find type `SomeStruct` in this scope
  --> tests/ui/parse_attrs_fails_if_combined_macros_dont_have_same_implementor_set.rs:13:8
   |
13 | struct SomeStruct;
   |        ^^^^^^^^^^ not found in this scope
