rust_writer_procedural/tests/ui/parse_attrs_fails_if_combined_macros_dont_have_same_implementor_set.rs
// SPDX-License-Identifier: GPL-3.0

use rust_writer::ast::{
	mutator::ToMutate,
	implementors::{ItemToImpl, ItemToTrait},
};
use rust_writer_procedural::{finder,  mutator};
use syn::visit_mut::VisitMut;

#[mutator(ItemToTrait<'a>, ItemToImpl<'a>)]
#[finder(ItemToImpl<'a>, ItemToTrait<'a>)]
#[impl_from]
struct SomeStruct;

fn main() {}
